cmake_minimum_required(VERSION 3.30.0)
set(CMAKE_CXX_STANDARD 23)
project(falwyr)

include(FetchContent)

set(RAYLIB_VERSION 5.0)

FetchContent_Declare(
  raylib
  URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
  FIND_PACKAGE_ARGS ${RAYLIB_VERSION}
)
FetchContent_MakeAvailable(raylib)
set(BUILD_EXAMPLES OFF CACHE INTERNAL "")
set(SOURCE_FILES src/main.cpp src/entity.cpp src/tiles.cpp)
add_executable(app ${SOURCE_FILES})
target_link_libraries(app raylib)
